Fix that shit (CSV reading now actually works)